--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "apollo-datasource-rest": "^0.14.0",
     "apollo-server": "^2.25.1",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "underscore": "^1.13.1"
   },
   "type": "module"
 }
